# Flui

./: Cargo.toml  FLIGHT_SELECTION.md  README.md
flightaware/: Cargo.toml  flightaware.openapi.yaml  flightaware_raw.openapi.yaml  sample_flight_aware.json
flightaware/examples/: check_sdk.rs
flightaware/src/: lib.rs
flui/: Cargo.toml  README.md
flui/examples/: alert_demo.rs  alert_visual_demo.rs  flight_path_demo.rs  flight_path_with_info_demo.rs  formatted_time_demo.rs  from_trait_demo.rs  progress_info_demo.rs  view_model_demo.rs
flui/src/: api_converter.rs  flight_status.rs  lib.rs  main.rs  mock_server.rs  ui.rs
flui/tests/: flight_api_test.rs
