[package]
name = "flightaware"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
progenitor = { git = "https://github.com/oxidecomputer/progenitor" }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regress = "0.4.1"

[build-dependencies]
regex = "1.12.2"
