[package]
name = "flui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "env"] }
flightaware = { version = "0.1.0", path = "../flightaware" }
reqwest = "0.12.24"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"
