[package]
name = "flui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "env"] }
crossterm = "0.29.0"
flightaware = { version = "0.1.0", path = "../flightaware" }
httpmock = { version = "0.8.2", optional = true }
ratatui = "0.29.0"
regex = { version = "1.12.2", optional = true }
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.1.1"
httpmock = "0.8.2"
predicates = "3.1.3"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6.5"

[features]
httpmock = ["dep:httpmock"]
regex = ["dep:regex"]
